Brief: added images Todo: - Adjust images

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -1254,7 +1254,7 @@
 \subsection{Signatures}
     \lstinputlisting[language=Alloy, caption=Data4Help model definition, firstline=0, lastline=38]{TrackMeAlloyModel.als}
     
-    \lstinputlisting[language=Alloy, caption=Automated-SOS model definition, firstline=38, lastline=48]{TrackMeAlloyModel.als}
+    \lstinputlisting[language=Alloy, caption=Automated-SOS model definition, firstline=39, lastline=48]{TrackMeAlloyModel.als}
     
     \lstinputlisting[language=Alloy, caption=Track4Run model definition, firstline=49, lastline=78]{TrackMeAlloyModel.als}
     
@@ -1277,19 +1277,31 @@
     
     \lstinputlisting[language=Alloy, caption=Track4Run predicates, firstline=210, lastline=239]{TrackMeAlloyModel.als}
     
-    \lstinputlisting[language=Alloy, caption=Common predicates, firstline=241, lastline=284]{TrackMeAlloyModel.als}
+    \lstinputlisting[language=Alloy, caption=Common predicates, firstline=240, lastline=283]{TrackMeAlloyModel.als}
     
     \newpage
 \subsection{Worlds}
-    \lstinputlisting[language=Alloy, caption=Run data4Help, firstline=285, lastline=285]{TrackMeAlloyModel.als}
-
-    \begin{figure}[!htpb]
-    	\centering
-    	\includegraphics[width=100mm]{images/alloy/enableSos.png}
-    \end{figure}
+    \lstinputlisting[language=Alloy, caption=Run data4Help, firstline=284, lastline=284]{TrackMeAlloyModel.als}
     \begin{figure}[!h]
     	\centering
-    	\includegraphics[width=100mm]{images/alloy/runSos.png}
+    	\includegraphics[width=\textwidth]{RASD/images/alloy/data4Help.png}
+    \end{figure}
+    
+    \lstinputlisting[language=Alloy, caption=Run automatedSos, firstline=285, lastline=285]{TrackMeAlloyModel.als}
+    \begin{figure}[!h]
+    	\centering
+    	\includegraphics[width=\textwidth]{RASD/images/alloy/automatedSOS.png}
+    \end{figure}
+    \lstinputlisting[language=Alloy, caption=Run track4Run, firstline=286, lastline=286]{TrackMeAlloyModel.als}
+    \begin{figure}[!h]
+    	\centering
+    	\includegraphics[width=\textwidth]{RASD/images/alloy/track4Run.png}
+    \end{figure}
+    
+    \lstinputlisting[language=Alloy, caption=Run showAll, firstline=287, lastline=287]{TrackMeAlloyModel.als}
+    \begin{figure}[!h]
+    	\centering
+    	\includegraphics[width=\textwidth]{RASD/images/alloy/showAll.png}
     \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
