Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -1282,29 +1282,29 @@
     \newpage
 \subsection{Worlds}
     \lstinputlisting[language=Alloy, caption=Run data4Help, firstline=284, lastline=284]{TrackMeAlloyModel.als}
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
     	\centering
     	\includegraphics[width=\textwidth]{RASD/images/alloy/data4Help.png}
     \end{figure}
     
     \lstinputlisting[language=Alloy, caption=Run automatedSos, firstline=285, lastline=285]{TrackMeAlloyModel.als}
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
     	\centering
     	\includegraphics[width=\textwidth]{RASD/images/alloy/automatedSOS.png}
     \end{figure}
     \lstinputlisting[language=Alloy, caption=Run track4Run, firstline=286, lastline=286]{TrackMeAlloyModel.als}
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
     	\centering
     	\includegraphics[width=\textwidth]{RASD/images/alloy/track4Run.png}
     \end{figure}
-    
+    \newpage
     \lstinputlisting[language=Alloy, caption=Run showAll, firstline=287, lastline=287]{TrackMeAlloyModel.als}
-    \begin{figure}[!h]
+    \begin{figure}[!ht]
     	\centering
-    	\includegraphics[width=\textwidth]{RASD/images/alloy/showAll.png}
+    	\includegraphics[width=0.91\paperwidth, angle=90]{RASD/images/alloy/showAll.png}
     \end{figure}
+    \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
 \section{Effort Spent}
     \begin{itemize}
         \item[-] \textbf{Davide Rutigliano:}
