Brief: DD, RASD, Images Added: - DD template Modified: - Changed shared images location from RASD/images to Images

--- a/DD/frontpage.tex
+++ b/DD/frontpage.tex
@@ -19,10 +19,10 @@
 \hfill
 \hfill
 \begin{center}
-    \fontsize{22px}{8mm}\selectfont \textsc{\textbf{Requirement Analysis and\\ Specification Document}}
+    \fontsize{22px}{8mm}\selectfont \textsc{\textbf{Design Document}}
 \end{center}
 \begin{center}
-    \fontsize{14px}{4mm}\selectfont \textsc{{Draft Version 0.2 - 24/10/2018}}
+    \fontsize{14px}{4mm}\selectfont \textsc{{Draft Version 0.1 - 05/11/2018}}
 \end{center}
 \hfill
 \hfill
