--- a/DD/main.tex
+++ b/DD/main.tex
@@ -35,10 +35,100 @@
 \section{Introduction}
 
 \subsection{Purpose}
+    The Purpose of this Design Document is to provide, in a more specific and technical way with regard to the RASD, all the details of \textit{TrackMe} system.
+    
+    In particular, this document is addressed to the developer's team. Through this paper they can better understand and identify:
+    \newline
+    \begin{itemize}
+    
+ \item{The high level architecture}
+ 
+ \item{The design patterns}
+ 
+ \item{The main components and their interfaces}
+ 
+ \item{The Runtime behavior}
+ 
+    \end{itemize}
+    
 
-\subsection{Scope}
+    \newpage
+    
+    \subsection{Scope}
+    \textit{TrackMe} system has been project in such a way that it is a service available on web and mobile application. The subjects the should use this service can belong to two different categories:
+    \newline
+    \begin{itemize}
+    
+    \item{Individuals}
+    
+    \item{Third-Party}
+    \newline
+    \end{itemize}
+    
+   
+   \textit{TrackMe} give allows Third-Party to access Individual's health data exploiting the functionalities of \textit{Data4help} section of \textit{TrackMe}. The Third-Parties can make Individual, or group request. the Individuals  can accept or not Third-parties' requests. The application may also allow individual users to connect external  devices such as smart-watches or similar, to perform a more detailed data acquisition and monitoring. 
+   \newline
+   
+   
+   In addition, the third-party may also provide a personalized and non intrusive SOS service for elderly people who requested it.
+   The system permits to enable the \textit{Automated-SOS} service that guarantees that the GPS position of an user, who has enabled \textit{Automated SOS}, can be send to the nearest ambulance available, when user's health parameters overcome some critical thresholds. This procedure takes place thanks to an ambulance dispatcher, which is connected to the Third-Party (which has enabled automated-SOS too), that has been selected by that individual to provide this service
+   \newline
+   
+   
+   Moreover,  through  the \textit{Track4Run} service, \textit{TrackMe} allows \textit{Organizers} (that are individuals)  to  \textit{create}  a  new  run:  a  competition  in  which other individuals can either participate as \textit{athletes} or watch as \textit{spectators}.  Additionally, this feature guarantees other services for keeping track of athletes progresses during the run, providing an interactive map of the run, with runners position on it.
+   
+   
 
-\subsection{Definitions, Acronyms, Abbreviations}
+
+
+
+\newpage
+
+
+\subsection{Definition, Acronyms and  Abbreviations}
+           
+            \subsubsection{Definition of Terms}
+            This document uses several terms that might be more loosely used elsewhere. These terms are defined here as they will be used later on in this document.
+                \begin{description}
+                    \item[\textbf{Subscribed User}] an individual for which one or more third party have done a request accepted by the individual itself
+                    
+                    \item[\textbf{External Device}] an external device such as a smart-watch or similar devices
+                    
+                    \item[\textbf{Run}] a competition organized and managed by an \textit{Organizer} to which \textit{Athletes} and \textit{Spectators} can enroll as participant or watchers
+                    
+                    \item[\textbf{Run Started}] a competition with at least two \textit{Athletes} enrolled that the \textit{Organizer} has started
+                    
+                    \item[\textbf{Run Not-Started}] a competition with any number of \textit{Athletes} enrolled
+                    
+                    \item[\textbf{Map}] The map of the predefined track of the run with athletes' positions
+                    
+                    \item[Accident] An event triggered when the monitored user's parameter overcome certain thresholds
+                    
+                    \item[\textbf{TrackMe}] the \textit{"system to be"}
+                    
+                    \item[\textbf{Data4Help}] a data monitoring service provided by \textit{TrackMe}
+                    
+                    \item[\textbf{Automated-SOS}] an SOS service built on top of \textit{Data4Help}
+                    
+                    \item[\textbf{Track4Run}] run management service offered by \textit{TrackMe} application
+                    
+                    \item[\textbf{Credential}] as used in this document, is a combination of both username and password used by an \textit{User} to authenticate him/herself during the Log-in phase
+                    
+                    \item[\textbf{Personal Data}] users' data of different kind either for Individuals (name, surname, age, etc.) or for Third-Parties such as Organization name, number of employees or VAT number
+                \end{description}
+                
+            
+            \subsubsection{Acronyms}
+            \begin{acronym}
+                \acro{DD}{Design Document}
+                \acro{UML}{Unified Modelling Language}
+                \acro{REST}{REpresentational State Transfer}
+                \acro{API}{Application Programming Interface}
+            \end{acronym}
+            
+            \subsubsection{Abbreviations}
+
+
 
 \subsection{Revision history}
 
