--- a/DD/main.tex
+++ b/DD/main.tex
@@ -131,10 +131,60 @@
 
 
 \subsection{Revision history}
+%????
 
 \subsection{Reference Documents}
 
+\printbibliography[heading=none]
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newpage
 \subsection{Document Structure}
+%% questa parte è presa pari pari dal DD su beep
+
+
+\begin{itemize}
+    \item \textbf{Introduction}: this section introduces the design document. It contains
+a justification of his utility and indications on which parts are covered in
+this document that are not covered by RASD.
+
+\item \textbf{Architecture Design}: this section is divided into different parts:
+\begin{enumerate}
+    \item Overview : this sections explains the division in tiers of our application
+    
+    \item High level components and their interaction : this sections gives
+a global view of the components of the application and how they
+communicate
+
+    \item Component view : this sections gives a more detailed view of the
+components of the applications
+
+    \item Deploying view : this section shows the components that must be
+deployed to have the application running correctly.
+
+    \item Runtime view : sequence diagrams are represented in this section to
+show the course of the different tasks of our applicatio
+
+    \item Component interfaces : the interfaces between the components are
+presented in this section
+
+    \item Selected architectural styles and patterns : this section explain the
+architectural choices taken during the creation of the application
+
+    \item Other design decisions
+    
+\end{enumerate}
+
+\item \textbf{Algorithms Design}: this section describes the most critical parts via
+some algorithms. Pseudo code is used in order to hide unnecessary implementation
+details in order to focus on the most important parts.
+
+\item \textbf{User Interface Design}: this section presents mockups and user experience
+explained via UX and BCE diagrams
+
+\item \textbf{Requirements Traceability}: this section aims to explain how the decisions
+taken in the RASD are linked to design elements
+\end{itemize}
 
 \section{Architectural Design}
 
